--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,47 @@
 # Core Dependencies
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-multipart==0.0.6
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-pydantic==2.5.2
-pydantic-settings==2.1.0
-email-validator==2.1.0.post1
+fastapi>=0.68.0
+uvicorn>=0.15.0
+python-multipart>=0.0.5
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
+SQLAlchemy>=1.4.23
+alembic>=1.7.1
+psycopg2-binary>=2.9.1
+redis>=4.0.0
 
-# Database
-sqlalchemy==2.0.23
-alembic==1.12.1
-psycopg2-binary==2.9.9
-redis==5.0.1
-aioredis==2.0.1
+# Frontend Dependencies
+PyQt6>=6.2.0
+PyQt6-Qt6>=6.2.0
+PyQt6-sip>=13.2.0
+qt-material>=2.12
+qdarkstyle>=3.1
+pyqtgraph>=0.12.3
+numpy>=1.21.2
 
-# Frontend
-PyQt6==6.6.0
-PyQt6-Qt6==6.6.0
-PyQt6-sip==13.6.0
-reportlab==4.0.7
-matplotlib==3.8.2
-pillow==10.1.0
-qrcode==7.4.2
+# Data Processing & Visualization
+pandas>=1.3.3
+reportlab>=3.6.2
+openpyxl>=3.0.9
+XlsxWriter>=3.0.2
+Pillow>=8.3.2
+
+# Development Tools
+black>=21.9b0
+isort>=5.9.3
+flake8>=3.9.2
+mypy>=0.910
+pytest>=6.2.5
+pytest-cov>=2.12.1
+pytest-asyncio>=0.15.1
+
+# Documentation
+mkdocs>=1.2.3
+mkdocs-material>=7.3.0
+
+# Monitoring & Logging
+prometheus-client>=0.11.0
+python-json-logger>=2.0.2
+elasticsearch>=7.15.0
 
 # API Client
 httpx==0.25.2
@@ -31,33 +50,18 @@ aiohttp==3.9.1
 
 # Security
 python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
 cryptography==41.0.7
 
-# Monitoring & Logging
-prometheus-client==0.19.0
-python-json-logger==2.0.7
-sentry-sdk==1.35.0
-
 # Testing
-pytest==7.4.3
-pytest-cov==4.1.0
-pytest-asyncio==0.23.2
 pytest-mock==3.12.0
 faker==20.1.0
 
 # Development Tools
-black==23.11.0
-flake8==6.1.0
-mypy==1.7.1
-isort==5.12.0
 autoflake==2.2.1
 pre-commit==3.5.0
 
 # Documentation
-mkdocs==1.5.3
-mkdocs-material==9.4.14
 mkdocstrings==0.24.0
 mkdocstrings-python==1.7.5
 
