--- a/requirements.txt
+++ b/requirements.txt
@@ -71,4 +71,12 @@ supervisor==4.2.5
 python-dotenv==1.0.0
 click==8.1.7
 typer==0.9.0
-rich==13.7.0 
+rich==13.7.0
+
+# AI Dependencies
+transformers>=4.36.2
+torch>=2.1.2
+sentencepiece>=0.1.99
+accelerate>=0.25.0
+bitsandbytes>=0.41.3
+optimum>=1.16.1 
